# Boolean

./: .gitignore  Boolean.cabal  CHANGELOG.md  README.md
.github/workflows/: haskell-ci.yml
src/: Boolean.hs
src/Data/: Boolean.hs
src/Data/Boolean/: List.hs  Numbers.hs  Overload.hs
