Cabal-Version:       >= 1.10
Name:                Boolean
Version:             0.2.4.1
Synopsis:            Generalized booleans and numbers
Category:            Data
Description:
  Some classes for generalized boolean operations.
  Starting with 0.1.0, this package uses type families.
  Up to version 0.0.2, it used MPTCs with functional dependencies.
  My thanks to Andy Gill for suggesting & helping with the change.
  Thanks also to Alex Horsman for Data.Boolean.Overload and to
  Jan Bracker for Data.Boolean.Numbers.
  .
  Copyright 2009-2013 Conal Elliott; BSD3 license.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2009-2013 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

extra-source-files:  CHANGELOG.md

tested-with:
  GHC == 9.6.1
  GHC == 9.4.4
  GHC == 9.2.7
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  GHC == 7.8.4
  GHC == 7.6.3
  GHC == 7.4.2
  GHC == 7.2.2
  GHC == 7.0.4

source-repository head
  type:     git
  location: https://github.com/conal/Boolean.git

Library
  hs-Source-Dirs:      src
  Build-Depends:       base<5
  Exposed-Modules:
                       Data.Boolean
                       Data.Boolean.Overload
                       Data.Boolean.Numbers
  Default-Language:    Haskell2010
  Default-Extensions:
                       TypeOperators
  Other-Extensions:
                       CPP
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       MultiParamTypeClasses
                       ScopedTypeVariables
                       TypeFamilies
                       UndecidableInstances

  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:       -Wcompat
